<resources>
    <string name="app_name">Bake It Yourself</string>

    <string name="divider">•</string>
    <string name="start_recipe_button">start</string>
    <string name="ingredients_recipe_button">ingredients</string>
    <string name="ingredients_icon_description">Ingredients icon</string>
    <string name="recipe_photo_description">Recipe photo</string>

    <string name="card_ingredients">%d ingredients</string>
    <string name="card_servings">%d servings</string>
    <string name="easy_recipe">Easy</string>
    <string name="medium_recipe">Medium</string>
    <string name="hard_recipe">Hard</string>
    <string name="title_activity_start_recipe">StartRecipeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dot_divider">.</string>
    <string name="recipe_step_image_description">Recipe step image</string>
    <string name="finish_cooking_message">Finished cooking?</string>
    <string name="affirmative_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="finish_recipe_toast_message">Bon appetit!</string>
    <string name="directions_title_text">Directions</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="start_recipe_widget_description">Start recipe icon</string>
    <string name="widget_no_items">No ingredients.</string>
    <string name="ingredient_icon_description">Ingredient icon</string>
    <string name="ingredients_title_plural">\' Ingredients</string>
    <string name="ingredients_title_singular">\'s Ingredients</string>
    <string name="rewind_button_description">5 seconds rewind button.</string>
    <string name="play_button_description">Play button.</string>
    <string name="pause_button_description">Pause button.</string>
    <string name="replay_button_description">Replay button.</string>
</resources>
