<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="8dp"
    tools:showIn="@layout/fragment_recipes_list">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_recipe_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textColor="@color/hard_red"
            android:textStyle="bold"
            android:alpha="0.7"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="hard"/>

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_recipe_difficulty"
            tools:text="Nutella Pie"/>

        <ImageView
            android:id="@+id/iv_ingredient_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:alpha="0.5"
            android:contentDescription="@string/ingredients_icon_description"
            card_view:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
            card_view:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_shopping_cart_black_24dp"/>

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:alpha="0.5"
            card_view:layout_constraintTop_toTopOf="@id/iv_ingredient_icon"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_ingredient_icon"
            card_view:layout_constraintStart_toEndOf="@id/iv_ingredient_icon"
            tools:text="9 ingredients"/>

        <ImageView
            android:id="@+id/iv_servings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:alpha="0.5"
            android:contentDescription="@string/ingredients_icon_description"
            card_view:layout_constraintTop_toBottomOf="@id/tv_ingredients"
            card_view:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_restaurant_black_24dp"/>

        <TextView
            android:id="@+id/tv_servings"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:alpha="0.5"
            card_view:layout_constraintTop_toTopOf="@id/iv_servings_icon"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_servings_icon"
            card_view:layout_constraintStart_toEndOf="@id/iv_servings_icon"
            tools:text="8 servings"/>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/recipe_photo_description"
            android:scaleType="centerCrop"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/recipe_placeholder" />

        <Button
            android:id="@+id/btn_start_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            card_view:layout_constraintTop_toBottomOf="@id/iv_photo"
            card_view:layout_constraintStart_toStartOf="parent"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:text="@string/start_recipe_button"/>

        <Button
            android:id="@+id/btn_show_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            card_view:layout_constraintTop_toBottomOf="@id/iv_photo"
            card_view:layout_constraintStart_toEndOf="@id/btn_start_recipe"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/ingredients_recipe_button" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>