<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_fill_in"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_recipe_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textColor="@color/hard_red"
        android:textStyle="bold"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="hard"/>

    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nutella Pie"/>

    <ImageView
        android:id="@+id/iv_ingredient_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/ingredients_icon_description"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
        app:layout_constraintStart_toStartOf="@id/tv_recipe_name"
        android:src="@drawable/ic_shopping_cart_black_24dp"/>

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
        app:layout_constraintStart_toEndOf="@id/iv_ingredient_icon"
        tools:text="9 ingredients"/>

    <TextView
        android:id="@+id/tv_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
        app:layout_constraintStart_toEndOf="@id/tv_ingredients"
        tools:text="@string/divider"/>

    <ImageView
        android:id="@+id/iv_servings_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        android:alpha="0.5"
        android:contentDescription="@string/ingredients_icon_description"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
        app:layout_constraintStart_toEndOf="@id/tv_divider"
        android:src="@drawable/ic_restaurant_black_24dp"/>

    <TextView
        android:id="@+id/tv_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
        app:layout_constraintStart_toEndOf="@id/iv_servings_icon"
        tools:text="8 servings"/>

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/recipe_photo_description"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_recipe_name"
        app:layout_constraintHorizontal_bias="0"
        tools:src="@drawable/recipe_placeholder" />

</android.support.constraint.ConstraintLayout>